--- a/archives/toutiao-search/2024-01-13.md
+++ b/archives/toutiao-search/2024-01-13.md
@@ -1,42 +1,70 @@
 # 2024-01-13
 
-共 158 条
+共 176 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Jan 13 2024 12:00:39 GMT+0800 (China Standard Time) -->
-1. [媒体：美方打击胡塞武装在意料之中](https://so.toutiao.com/search?keyword=媒体：美方打击胡塞武装在意料之中)
-1. [美英缘何打击胡塞武装](https://so.toutiao.com/search?keyword=美英缘何打击胡塞武装)
+<!-- 最后更新时间 Sat Jan 13 2024 13:00:37 GMT+0800 (China Standard Time) -->
+1. [赖侯柯均已现身台湾“大选”投票](https://so.toutiao.com/search?keyword=赖侯柯均已现身台湾“大选”投票)
+1. [蓝绿白发起最后冲刺 现场气氛火热](https://so.toutiao.com/search?keyword=蓝绿白发起最后冲刺+现场气氛火热)
 1. [中国货物贸易有望保持全球第一](https://so.toutiao.com/search?keyword=中国货物贸易有望保持全球第一)
-1. [侯友宜：这一票是为台海安定而投](https://so.toutiao.com/search?keyword=侯友宜：这一票是为台海安定而投)
-1. [马伊琍听游本昌发言落泪](https://so.toutiao.com/search?keyword=马伊琍听游本昌发言落泪)
-1. [山东文旅让山东人沉默了](https://so.toutiao.com/search?keyword=山东文旅让山东人沉默了)
+1. [美英缘何打击胡塞武装](https://so.toutiao.com/search?keyword=美英缘何打击胡塞武装)
+1. [马伊琍拍繁花三年没见过游本昌](https://so.toutiao.com/search?keyword=马伊琍拍繁花三年没见过游本昌)
+1. [美国连续第二天空袭胡塞目标](https://so.toutiao.com/search?keyword=美国连续第二天空袭胡塞目标)
 1. [霍尊疑似复出](https://so.toutiao.com/search?keyword=霍尊疑似复出)
-1. [中方就美方攻击胡塞武装表态](https://so.toutiao.com/search?keyword=中方就美方攻击胡塞武装表态)
+1. [马伊琍听游本昌发言落泪](https://so.toutiao.com/search?keyword=马伊琍听游本昌发言落泪)
 1. [美防长1月3日命殒基辅？假的](https://so.toutiao.com/search?keyword=美防长1月3日命殒基辅？假的)
-1. [河南景区上演“美男计”](https://so.toutiao.com/search?keyword=河南景区上演“美男计”)
-1. [台湾今日“大选”投票](https://so.toutiao.com/search?keyword=台湾今日“大选”投票)
+1. [山东文旅让山东人沉默了](https://so.toutiao.com/search?keyword=山东文旅让山东人沉默了)
+1. [台媒：赖清德还有一堆事交代不清](https://so.toutiao.com/search?keyword=台媒：赖清德还有一堆事交代不清)
+1. [唐嫣蹲着和游本昌说话](https://so.toutiao.com/search?keyword=唐嫣蹲着和游本昌说话)
+1. [缅甸各方在昆明达成停火协议](https://so.toutiao.com/search?keyword=缅甸各方在昆明达成停火协议)
+1. [侯友宜“选前之夜”强调反“台独”](https://so.toutiao.com/search?keyword=侯友宜“选前之夜”强调反“台独”)
 1. [胡歌暖心搀扶游本昌上台](https://so.toutiao.com/search?keyword=胡歌暖心搀扶游本昌上台)
 1. [王家卫说女孩晚上拍最美](https://so.toutiao.com/search?keyword=王家卫说女孩晚上拍最美)
-1. [侯友宜“选前之夜”强调反“台独”](https://so.toutiao.com/search?keyword=侯友宜“选前之夜”强调反“台独”)
-1. [唐嫣蹲着和游本昌说话](https://so.toutiao.com/search?keyword=唐嫣蹲着和游本昌说话)
-1. [美国连续第二天空袭胡塞目标](https://so.toutiao.com/search?keyword=美国连续第二天空袭胡塞目标)
+1. [官方通报国企领导出轨下属致其流产](https://so.toutiao.com/search?keyword=官方通报国企领导出轨下属致其流产)
+1. [直击平顶山煤矿事故救援现场](https://so.toutiao.com/search?keyword=直击平顶山煤矿事故救援现场)
+1. [中方就美方攻击胡塞武装表态](https://so.toutiao.com/search?keyword=中方就美方攻击胡塞武装表态)
+1. [刘德华下个月就要去超市上班了](https://so.toutiao.com/search?keyword=刘德华下个月就要去超市上班了)
 1. [河南煤矿事故已致8人遇难8人失联](https://so.toutiao.com/search?keyword=河南煤矿事故已致8人遇难8人失联)
-1. [程前和董宇辉差距在哪里](https://so.toutiao.com/search?keyword=程前和董宇辉差距在哪里)
+1. [侯友宜：这一票是为台海安定而投](https://so.toutiao.com/search?keyword=侯友宜：这一票是为台海安定而投)
+1. [湖北把网红解局长送去了尔滨](https://so.toutiao.com/search?keyword=湖北把网红解局长送去了尔滨)
+1. [狗子吃席坐半天没人给夹菜](https://so.toutiao.com/search?keyword=狗子吃席坐半天没人给夹菜)
+1. [18个湖南“小辣椒”出发哈尔滨](https://so.toutiao.com/search?keyword=18个湖南“小辣椒”出发哈尔滨)
+1. [北大校花谈演艺圈潜规则：能挣几百万](https://so.toutiao.com/search?keyword=北大校花谈演艺圈潜规则：能挣几百万)
 1. [吴谢宇再写道歉信：愿给母家两套房](https://so.toutiao.com/search?keyword=吴谢宇再写道歉信：愿给母家两套房)
-1. [缅甸各方在昆明达成停火协议](https://so.toutiao.com/search?keyword=缅甸各方在昆明达成停火协议)
+1. [专家解读2023年金融数据](https://so.toutiao.com/search?keyword=专家解读2023年金融数据)
+1. [关晓彤让沈腾别再秀阅片量了](https://so.toutiao.com/search?keyword=关晓彤让沈腾别再秀阅片量了)
+1. [申京29+6 火箭送活塞7连败](https://so.toutiao.com/search?keyword=申京29+6+火箭送活塞7连败)
+1. [第一批回村的单身小伙展示实力](https://so.toutiao.com/search?keyword=第一批回村的单身小伙展示实力)
+1. [东北小姐姐第一次吃东北蔓越莓](https://so.toutiao.com/search?keyword=东北小姐姐第一次吃东北蔓越莓)
+1. [《安徽省机构改革方案》获批](https://so.toutiao.com/search?keyword=《安徽省机构改革方案》获批)
+1. [国足今夜迎战塔吉克斯坦大名单确认](https://so.toutiao.com/search?keyword=国足今夜迎战塔吉克斯坦大名单确认)
+1. [王哲林迎来生涯400场里程碑](https://so.toutiao.com/search?keyword=王哲林迎来生涯400场里程碑)
+1. [程前和董宇辉差距在哪里](https://so.toutiao.com/search?keyword=程前和董宇辉差距在哪里)
+1. [国足：尽所有努力拿下亚洲杯开门红](https://so.toutiao.com/search?keyword=国足：尽所有努力拿下亚洲杯开门红)
+1. [张艺谋说对赵丽颖表演非常满意](https://so.toutiao.com/search?keyword=张艺谋说对赵丽颖表演非常满意)
+1. [媒体：国足首战场地是国奥队伤心地](https://so.toutiao.com/search?keyword=媒体：国足首战场地是国奥队伤心地)
+1. [美媒：红海航运受阻让商家苦不堪言](https://so.toutiao.com/search?keyword=美媒：红海航运受阻让商家苦不堪言)
+1. [23岁男大学生赴日滑雪身亡](https://so.toutiao.com/search?keyword=23岁男大学生赴日滑雪身亡)
+1. [马伊琍：王家卫拍出自己最美的样子](https://so.toutiao.com/search?keyword=马伊琍：王家卫拍出自己最美的样子)
+1. [阿根廷2023年累计通胀率达211.4%](https://so.toutiao.com/search?keyword=阿根廷2023年累计通胀率达211.4%)
+1. [俄称半岛局势升级是美西方政策所致](https://so.toutiao.com/search?keyword=俄称半岛局势升级是美西方政策所致)
+1. [张小斐演“贾玲”](https://so.toutiao.com/search?keyword=张小斐演“贾玲”)
+1. [董宇辉给冯仑周鸿祎等大佬“讲课”](https://so.toutiao.com/search?keyword=董宇辉给冯仑周鸿祎等大佬“讲课”)
+1. [马伊琍回忆拍《繁花》的3年](https://so.toutiao.com/search?keyword=马伊琍回忆拍《繁花》的3年)
+1. [我国将迎来一次大范围雨雪天气过程](https://so.toutiao.com/search?keyword=我国将迎来一次大范围雨雪天气过程)
+1. [哈登对阵灰熊得到11分1板9助](https://so.toutiao.com/search?keyword=哈登对阵灰熊得到11分1板9助)
+1. [一页1996年日历卖到45元](https://so.toutiao.com/search?keyword=一页1996年日历卖到45元)
+1. [媒体：美方打击胡塞武装在意料之中](https://so.toutiao.com/search?keyword=媒体：美方打击胡塞武装在意料之中)
+1. [河南景区上演“美男计”](https://so.toutiao.com/search?keyword=河南景区上演“美男计”)
+1. [台湾今日“大选”投票](https://so.toutiao.com/search?keyword=台湾今日“大选”投票)
 1. [侯友宜：美最危险3“朋友”2个开战](https://so.toutiao.com/search?keyword=侯友宜：美最危险3“朋友”2个开战)
 1. [记者实探众筹1.2亿建别墅的博陆村](https://so.toutiao.com/search?keyword=记者实探众筹1.2亿建别墅的博陆村)
-1. [北大校花谈演艺圈潜规则：能挣几百万](https://so.toutiao.com/search?keyword=北大校花谈演艺圈潜规则：能挣几百万)
 1. [成都街头艺人演唱获刘欢点赞](https://so.toutiao.com/search?keyword=成都街头艺人演唱获刘欢点赞)
 1. [以色列与南非就“种族灭绝”交锋](https://so.toutiao.com/search?keyword=以色列与南非就“种族灭绝”交锋)
 1. [刘建超会见美国国务卿布林肯](https://so.toutiao.com/search?keyword=刘建超会见美国国务卿布林肯)
 1. [女子硬扛流感10天 两个肺都白了](https://so.toutiao.com/search?keyword=女子硬扛流感10天+两个肺都白了)
-1. [第一批回村的单身小伙展示实力](https://so.toutiao.com/search?keyword=第一批回村的单身小伙展示实力)
-1. [一页1996年日历卖到45元](https://so.toutiao.com/search?keyword=一页1996年日历卖到45元)
 1. [安徽文旅连夜听劝](https://so.toutiao.com/search?keyword=安徽文旅连夜听劝)
 1. [WTT多哈赛国乒提前包揽全部冠军](https://so.toutiao.com/search?keyword=WTT多哈赛国乒提前包揽全部冠军)
-1. [张艺谋说对赵丽颖表演非常满意](https://so.toutiao.com/search?keyword=张艺谋说对赵丽颖表演非常满意)
-1. [23岁男大学生赴日滑雪身亡](https://so.toutiao.com/search?keyword=23岁男大学生赴日滑雪身亡)
 1. [美国防部：空袭胡塞武装效果良好](https://so.toutiao.com/search?keyword=美国防部：空袭胡塞武装效果良好)
 1. [美国白宫：对乌克兰军事支持已暂停](https://so.toutiao.com/search?keyword=美国白宫：对乌克兰军事支持已暂停)
 1. [媒体人：国足首战须控制动作和情绪](https://so.toutiao.com/search?keyword=媒体人：国足首战须控制动作和情绪)
@@ -44,14 +72,11 @@
 1. [2023年中国进出口总值41.76万亿元](https://so.toutiao.com/search?keyword=2023年中国进出口总值41.76万亿元)
 1. [以军称发现哈马斯扣押人质的隧道](https://so.toutiao.com/search?keyword=以军称发现哈马斯扣押人质的隧道)
 1. [美英空袭也门对红海局势有何影响](https://so.toutiao.com/search?keyword=美英空袭也门对红海局势有何影响)
-1. [我国将迎来一次大范围雨雪天气过程](https://so.toutiao.com/search?keyword=我国将迎来一次大范围雨雪天气过程)
 1. [程前穿红衣现身周鸿祎演讲现场](https://so.toutiao.com/search?keyword=程前穿红衣现身周鸿祎演讲现场)
 1. [美考虑重新将胡塞武装列为恐怖组织](https://so.toutiao.com/search?keyword=美考虑重新将胡塞武装列为恐怖组织)
 1. [警方通报大一女生校内坠楼身亡](https://so.toutiao.com/search?keyword=警方通报大一女生校内坠楼身亡)
 1. [妈妈公交车上怒斥霸凌儿子的同学](https://so.toutiao.com/search?keyword=妈妈公交车上怒斥霸凌儿子的同学)
-1. [东北小姐姐第一次吃东北蔓越莓](https://so.toutiao.com/search?keyword=东北小姐姐第一次吃东北蔓越莓)
 1. [官方回应村民向纪委反映情况被怼](https://so.toutiao.com/search?keyword=官方回应村民向纪委反映情况被怼)
-1. [董宇辉给冯仑周鸿祎等大佬“讲课”](https://so.toutiao.com/search?keyword=董宇辉给冯仑周鸿祎等大佬“讲课”)
 1. [小砂糖橘清亦生病了想吃锅包肉](https://so.toutiao.com/search?keyword=小砂糖橘清亦生病了想吃锅包肉)
 1. [中国版“星链”引俄媒关注](https://so.toutiao.com/search?keyword=中国版“星链”引俄媒关注)
 1. [胡塞指责美英为保护以色列发动袭击](https://so.toutiao.com/search?keyword=胡塞指责美英为保护以色列发动袭击)
@@ -59,7 +84,6 @@
 1. [一楼违建阳光房 多部门阻止未果](https://so.toutiao.com/search?keyword=一楼违建阳光房+多部门阻止未果)
 1. [山东“17根小葱花”勇闯哈尔滨](https://so.toutiao.com/search?keyword=山东“17根小葱花”勇闯哈尔滨)
 1. [胡塞称对美英军舰发动了报复性打击](https://so.toutiao.com/search?keyword=胡塞称对美英军舰发动了报复性打击)
-1. [官方通报国企领导出轨下属致其流产](https://so.toutiao.com/search?keyword=官方通报国企领导出轨下属致其流产)
 1. [华晨宇宋亚轩演泰坦尼克号](https://so.toutiao.com/search?keyword=华晨宇宋亚轩演泰坦尼克号)
 1. [科兴新冠疫苗停产背后](https://so.toutiao.com/search?keyword=科兴新冠疫苗停产背后)
 1. [我为河北文旅举大旗](https://so.toutiao.com/search?keyword=我为河北文旅举大旗)
@@ -68,14 +92,11 @@
 1. [国防部：要求美方停止危险挑衅行径](https://so.toutiao.com/search?keyword=国防部：要求美方停止危险挑衅行径)
 1. [马伊琍称拍繁花3年很累被吐槽卖惨](https://so.toutiao.com/search?keyword=马伊琍称拍繁花3年很累被吐槽卖惨)
 1. [白宫遭质疑未经批准擅自出兵](https://so.toutiao.com/search?keyword=白宫遭质疑未经批准擅自出兵)
-1. [阿根廷2023年累计通胀率达211.4%](https://so.toutiao.com/search?keyword=阿根廷2023年累计通胀率达211.4%)
 1. [文莱“亚洲最帅王子”迎娶平民妻子](https://so.toutiao.com/search?keyword=文莱“亚洲最帅王子”迎娶平民妻子)
 1. [沈腾说加上一个玲是一百分](https://so.toutiao.com/search?keyword=沈腾说加上一个玲是一百分)
-1. [狗子吃席坐半天没人给夹菜](https://so.toutiao.com/search?keyword=狗子吃席坐半天没人给夹菜)
 1. [上海地铁两女子大打出手 警方介入](https://so.toutiao.com/search?keyword=上海地铁两女子大打出手+警方介入)
 1. [上海男篮伤情公告：五人受伤病侵袭](https://so.toutiao.com/search?keyword=上海男篮伤情公告：五人受伤病侵袭)
 1. [媒体：赵丽颖的银幕之路越走越宽](https://so.toutiao.com/search?keyword=媒体：赵丽颖的银幕之路越走越宽)
-1. [张小斐演“贾玲”](https://so.toutiao.com/search?keyword=张小斐演“贾玲”)
 1. [贾玲导演新片《热辣滚烫》首曝预告](https://so.toutiao.com/search?keyword=贾玲导演新片《热辣滚烫》首曝预告)
 1. [胡塞武装称将继续打击与以相关船只](https://so.toutiao.com/search?keyword=胡塞武装称将继续打击与以相关船只)
 1. [天舟六号顺利撤离空间站组合体](https://so.toutiao.com/search?keyword=天舟六号顺利撤离空间站组合体)
@@ -88,7 +109,6 @@
 1. [刘亦菲NBA梦幻联动](https://so.toutiao.com/search?keyword=刘亦菲NBA梦幻联动)
 1. [无人机拧灯泡拧出空间站对接的感觉](https://so.toutiao.com/search?keyword=无人机拧灯泡拧出空间站对接的感觉)
 1. [山西警方悬赏20万的重案嫌犯已被抓](https://so.toutiao.com/search?keyword=山西警方悬赏20万的重案嫌犯已被抓)
-1. [马伊琍：王家卫拍出自己最美的样子](https://so.toutiao.com/search?keyword=马伊琍：王家卫拍出自己最美的样子)
 1. [“ChatGPT之父”与同性男友结婚](https://so.toutiao.com/search?keyword=“ChatGPT之父”与同性男友结婚)
 1. [拜登发声明称对胡塞“成功打击”](https://so.toutiao.com/search?keyword=拜登发声明称对胡塞“成功打击”)
 1. [河南文旅真的把王一博请来了](https://so.toutiao.com/search?keyword=河南文旅真的把王一博请来了)
@@ -105,13 +125,11 @@
 1. [河南文旅上演“美人计”](https://so.toutiao.com/search?keyword=河南文旅上演“美人计”)
 1. [0713男团现身2024央视春晚彩排](https://so.toutiao.com/search?keyword=0713男团现身2024央视春晚彩排)
 1. [河南景区上演“美男计”吸引外地游客](https://so.toutiao.com/search?keyword=河南景区上演“美男计”吸引外地游客)
-1. [蓝绿白发起最后冲刺 现场气氛火热](https://so.toutiao.com/search?keyword=蓝绿白发起最后冲刺+现场气氛火热)
 1. [2023全年人民币存款增加25.74万亿](https://so.toutiao.com/search?keyword=2023全年人民币存款增加25.74万亿)
 1. [重庆发现亿吨级石油资源](https://so.toutiao.com/search?keyword=重庆发现亿吨级石油资源)
 1. [李铁同款签字安全笔已售9万支](https://so.toutiao.com/search?keyword=李铁同款签字安全笔已售9万支)
 1. [女子常吃牛肉体内排出4米长绦虫](https://so.toutiao.com/search?keyword=女子常吃牛肉体内排出4米长绦虫)
 1. [胡明轩18+8 广东轻取宁波](https://so.toutiao.com/search?keyword=胡明轩18+8+广东轻取宁波)
-1. [台媒：赖清德还有一堆事交代不清](https://so.toutiao.com/search?keyword=台媒：赖清德还有一堆事交代不清)
 1. [吉伦沃特35分 山东117-111北京](https://so.toutiao.com/search?keyword=吉伦沃特35分+山东117-111北京)
 1. [美称已空袭也门60多处目标](https://so.toutiao.com/search?keyword=美称已空袭也门60多处目标)
 1. [奥地利女子继承近2亿遗产要捐出9成](https://so.toutiao.com/search?keyword=奥地利女子继承近2亿遗产要捐出9成)
